Upgrade to Java 17 on iteration 3